Add age timer and change image with age

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<div class="stats-container">
 					<h2>Stats</h2>
 					<ul>
-						<li>Age: <span>0</span></li>
-						<li>Hunger: <span>0</span></li>
+						<li>Age: <span id="js-age">0</span></li>
+						<li>Hunger: <span id="js-hunger">0</span></li>
 						<li>Sleepiness: <span>0</span></li>
 						<li>Boredom: <span>0</span></li>
 					</ul>
@@ -48,10 +48,10 @@
 					Click "play" to get started. Maintain hunger, sleepiness, and boredom
 					below 100 to keep your pet alive.
 				</p>
-				<button>Play</button>
+				<button id="js-play-btn">Play</button>
 			</div>
 		</section>
-		<section class="modal-container modal-game-over">
+		<section class="modal-container modal-game-over hide">
 			<div class="modal-inner">
 				<h2>Game Over</h2>
 				<p>Oh no! Your pet has died. Click "play" to start a new game.</p>
